--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     height: 100px;
     width: 550px;
 
-    border: 1px solid black !important;
+    border: 2px solid rgb(254, 0, 0) !important;
     border-radius: 10px !important;
 
     display: flex;
